# python_labs

./: .coverage  .gitignore  README.md  letters  pyproject.toml  words
data/: checkvalueerror.csv  input.txt  input2.txt  lab05csv.csv  people.xlsx  people1251.csv  peoplenotdict.json  report.csv  report2.csv  reportlarge.csv  very_large.txt
data/1sem/: people.json  people1251.json
data/lab08/: students_input.json
data/lab4/: report.csv
lab1/: 02_sum_avg.py
labs/: lab01.md
src/1sem/: README.md  pyproject.toml
src/1sem/data1sem/: people.xlsx  peoplein.csv
src/1sem/data1sem/lab09/: students.csv
src/1sem/lab01/: 04_minutes_to_hhmm.py
src/1sem/lab04/: io_txt_csv.py
src/1sem/lab06/: cli_text.py  people.xlsx
src/1sem/lab08/: checking.py
src/1sem/lab09/: check.py  group.py
src/1sem/lab10/: checking.py  linked_list.py
src/1sem/tests/: test_json_csv.py  test_text.py
src/lab01/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py  05_initials_and_len.py
src/lab02/: arrays.py  matrix.py  tuples.py
src/lab03/: text.py  text_stats.py
src/lab04/: 111.py  io_txt_csv.py  text.py  text_report.py
src/lab05/: csv_xlsx.py  json_csv.py
src/lab06/: cli_convert.py  cli_text.py  csv_xlsx.py  json_csv.py  people.csv  people.json  text.py  text.txt
src/lab08/: checking.py  models.py  serialize.py
src/lab09/: check.py  group.py
src/lab10/: structures.py
src/python_labs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_json_csv.py  test_text.py
коды/: 1  2.py
коды2лаба/: arrays.py  matrix.py  tuples.py
коды3лаба/: text.py
(+39 files in other folders)
