[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "python-labs"
dynamic = ["version"]

dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.6"
]

[tool.black]
line-length = 88
target-version = ["py38"]

